<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditTaskActivity">

    <TextView
        android:id="@+id/idTxtTaskHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_task"
        android:textSize="24sp"
        android:textColor="@color/darkpink"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/idEditTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTxtTaskHeading"
        android:layout_margin="10dp"
        android:hint="@string/enter_task_title"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:background="@drawable/boarder" />

    <EditText
        android:id="@+id/idEditTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idEditTaskDueDate"
        android:layout_above="@id/idBtnAddUpdate"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boarder"
        android:gravity="start|top"
        android:hint="@string/enter_task_description"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/idEditTaskPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idEditTaskTitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boarder"
        android:gravity="start|top"
        android:hint="@string/enter_task_priority"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/idEditTaskDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditTaskPriority"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boarder"
        android:gravity="start|top"
        android:hint="@string/enter_task_due_date"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/idBtnAddUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Button"
        android:backgroundTint="@color/pink"
        android:textAllCaps="false" />


</RelativeLayout>
